import groovy.json.JsonSlurper

plugins {
    id 'java'
}

def json = new JsonSlurper()
def mod = json.parse("$rootDir/mod.json" as File)

group = "net.buj"
version = "${mod['version']}"

compileJava.options.encoding = "UTF-8"
repositories {
    mavenCentral()
    maven { url "https://raw.githubusercontent.com/Zelaux/MindustryRepo/master/repository" }
    maven { url 'https://www.jitpack.io' }
}

allprojects {
    tasks.withType(JavaCompile).configureEach {
        targetCompatibility = 16
        sourceCompatibility = 16

        options.forkOptions.jvmArgs += [
                '--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
                '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
                '--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
                '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
                '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
                '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
                '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
                '--add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED'
        ]
    }
}

dependencies {
    compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
    compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"

    compileOnly "org.projectlombok:lombok:1.18.42"
    annotationProcessor "org.projectlombok:lombok:1.18.42"

    // testImplementation "com.github.Anuken.Mindustry:core:$mindustryVersion"
    // testImplementation "com.github.Anuken.Arc:arc-core:$mindustryVersion"
    // testImplementation "com.github.Anuken.Arc:natives:$mindustryVersion"
    // testImplementation "com.github.Anuken.Arc:backend-headless:$mindustryVersion"
    // testImplementation(platform("org.junit:junit-bom:6.0.0"))
    // testImplementation "org.junit.jupiter:junit-jupiter"
    // testRuntimeOnly "org.junit.platform:junit-platform-launcher"
}

jar {
    archiveFileName = "${jar.archiveBaseName.get()}Desktop.jar"
    
    from new File("$rootDir/mod.json")

    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }

    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

def sdkRoot = System.getenv("ANDROID_HOME") ?: System.getenv("ANDROID_SDK_ROOT")

tasks.register("jarAndroid") {
    dependsOn jar

    doLast {
        if (!sdkRoot || !new File(sdkRoot).exists()) throw new GradleException("No valid Android SDK found. Ensure that ANDROID_HOME is set to your Android SDK directory.");

        def platformRoot = new File("$sdkRoot/platforms/").listFiles().sort().reverse().find{ f -> new File(f, "android.jar").exists()}

        if (!platformRoot) throw new GradleException("No android.jar found. Ensure that you have an Android platform installed.")

        //collect dependencies needed for desugaring
        def dependencies = (configurations.compileClasspath.asList() + configurations.runtimeClasspath.asList() + [new File(platformRoot, "android.jar")]).collect{ "--classpath $it.path" }.join(" ")

        def buildToolsRoot
        if (project.hasProperty("buildToolsVersion"))
            buildToolsRoot = new File("$sdkRoot/build-tools/${project.properties["buildToolsVersion"]}").absolutePath
        else
            buildToolsRoot = new File("$sdkRoot/build-tools/").listFiles().sort { x, y -> x.name <=> y.name }.first().absolutePath

        //dex and desugar files - this requires d8 in your PATH
        "env d8 $dependencies --min-api 14 --output ${jar.archiveBaseName.get()}Android.jar ${jar.archiveBaseName.get()}Desktop.jar"
                .execute(["PATH=$buildToolsRoot:${System.getenv("PATH")}"], new File("$rootDir/build/libs/")).waitForProcessOutput(System.out, System.err)
    }
}

tasks.register("deploy", Jar) {
    dependsOn jar
    dependsOn jarAndroid

    duplicatesStrategy = DuplicatesStrategy.EXCLUDE

    from { [ zipTree("$rootDir/build/libs/${jar.archiveBaseName.get()}Android.jar"), zipTree("$rootDir/build/libs/${jar.archiveBaseName.get()}Desktop.jar") ] }
}

tasks.named("build") {
    dependsOn deploy
}

// test {
//     useJUnitPlatform()
//     testLogging {
//         events "passed", "skipped", "failed"
//     }
// }
